# qbit-chatbot-web-rust

./: Cargo.toml  README.md
src/: main.rs
src/auth/: google.rs  mod.rs  twitter.rs
src/chatbot/: mod.rs  openai.rs
src/routes/: mod.rs  mongodb.rs
src/rpc/: mod.rs  streaming.rs
